force-app/src/objects/ffbf__CompanyTest__c.object
<CustomObject>
    <fields>
        <fullName>ffbf__ByOrderofAddressLine1__c</fullName>
        <label>By Order of Address Line 1</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__ByOrderofAddressLine2__c</fullName>
        <label>By Order of Address Line 2</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__ByOrderofAddressLine3__c</fullName>
        <label>By Order of Address Line 3</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__CompanyIdentificationNumber__c</fullName>
        <label>Company Identification Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffbf__CompanySpecification__c</fullName>
        <label>Company Specification</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Company Test</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Company Tests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>